--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -1,3 +1,16 @@
+
+// ******************************************************
+
+// HEADER
+
+#main-nav
+  ul.grid-row
+    justify-content: normal
+
+// ******************************************************
+
+// FRONT PAGE
+
 .frontpage-section-label
   border-right: $border-style
   text-align: right
